--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -1,21 +1,20 @@
 resources:
-- ../../base
+  - ../../base
 patches:
-- path: ingress-patch.yaml
-  target:
-    kind: Ingress
-    name: angular
+  - path: ingress-patch.yaml
+    target:
+      kind: Ingress
+      name: angular
+  - path: image-patch.yaml
+    target:
+      kind: Deployment
+      name: angular
+
 commonLabels:
   app: dev-angular
 namespace: dev
 configMapGenerator:
-- behavior: merge
-  literals:
-  - ENV=dev
-  name: angular
-images:
-- name: angular-k8s
-  newName: 5h4k4r/angular-k8s
-  newTag: 122eff4788c8d76831767fc662c3bb64e21879e2
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+  - behavior: merge
+    literals:
+      - ENV=dev
+    name: angular
