Update prod and staging kustomization

--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -5,18 +5,12 @@ patches:
     target:
       kind: Ingress
       name: angular
+
 commonLabels:
   app: prod-angular
 namespace: prod
-replicas:
-  - name: angular
-    count: 2
-images:
-  - name: angular
-    newTag: 6b654da03c0e
-namePrefix: prod-
 configMapGenerator:
-  - name: angular
-    behavior: merge
+  - behavior: merge
     literals:
       - ENV=prod
+    name: angular
