Update staging kustomization

--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -1,12 +1,10 @@
 resources:
   - ../../base
-patchesJson6902:
-  - target:
-      group: extensions
-      version: v1
+patches:
+  - path: ingress-patch.yaml
+    target:
       kind: Ingress
       name: angular
-    path: ingress-patch.yaml
 
 commonLabels:
   app: staging-angular
