--- a/kubernetes/base/ingress.yaml
+++ b/kubernetes/base/ingress.yaml
@@ -10,7 +10,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/^(?!api$).*"
+            path: /^(?!api).*
             backend:
               service:
                 name: angular
