match any route except api

--- a/kubernetes/base/ingress.yaml
+++ b/kubernetes/base/ingress.yaml
@@ -10,7 +10,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: \b(?!api\b)\w+
+            path: "^(?!api).*"
             backend:
               service:
                 name: angular
