--- a/kubernetes/overlays/dev/ingress-patch.yaml
+++ b/kubernetes/overlays/dev/ingress-patch.yaml
@@ -1,3 +1,13 @@
 - op: replace
   path: /spec/rules/0/host
   value: dev.shakar.tech
+- op: add
+  path: /spec/tls
+  value:
+    - hosts:
+        - dev.shakar.tech
+      secretName: dev-tls
+- op: add
+  path: /metadata/annotations
+  value:
+    cert-manager.io/cluster-issuer: "letsencrypt-staging"
